bower install (Polymer 0.5.5, add a lot of missing .bower.json files)

--- a/Client/sys/juicy-tiles-setup-sync/src/juicy-tiles-setup-sync.html
+++ b/Client/sys/juicy-tiles-setup-sync/src/juicy-tiles-setup-sync.html
@@ -70,7 +70,7 @@
 
                 // FIXME: temporary workaround for servers not accepting JSON-Patch
                 var req = new XMLHttpRequest();
-                req.open("POST", "/launcher/juicytilessetup?"+this.name, true);
+                req.open("POST", "/juicytilessetup?"+this.name, true);
                 req.onreadystatechange = function () {
                   if (req.readyState == 4){
                     if (!(req.status >= 200 && req.status <= 299)) {
@@ -94,7 +94,7 @@
 
                 // FIXME: temporary workaround for servers not accepting JSON-Patch
                 var req = new XMLHttpRequest();
-                req.open("DELETE", "/launcher/juicytilessetup?"+this.name, true);
+                req.open("DELETE", "/juicytilessetup?"+this.name, true);
                 req.onreadystatechange = function () {
                   if (req.readyState == 4){
                     if (!(req.status >= 200 && req.status <= 299)) {
