--- a/Client/elements/launcher-partial/launcher-partial.html
+++ b/Client/elements/launcher-partial/launcher-partial.html
@@ -12,7 +12,10 @@ by providing predefined template content, which should serve to include partials
 
 <template>
   <!-- FIXME: one-way binding here is temporary workaround for servers not accepting JSON-Patch (tomalec) -->
-  <juicy-tiles-setup-sync name="{{Html}}" storedValue="[[_setup]]" ></juicy-tiles-setup-sync>
+  <juicy-tiles-setup-sync 
+      name="{{Html}}" 
+      storedValue="[[_setup]]"
+      apiUrl="/launcher/juicytilessetup"></juicy-tiles-setup-sync>
   <juicy-tile-grid 
       id="juicy-tile:{{Html}}" 
       setup="[[_setup | clonedSetup ]]" 
