--- a/Client/elements/launcher-partial/launcher-root-partial.html
+++ b/Client/elements/launcher-partial/launcher-root-partial.html
@@ -13,7 +13,10 @@ with predefined template content, which should be used to include partials.
 <template id="partial-template">
   <template bind>
     <!-- FIXME: one-way binding here is temporary workaround for servers not accepting JSON-Patch (tomalec) -->
-    <juicy-tiles-setup-sync name="{{Html}}" storedValue="[[_setup]]" ></juicy-tiles-setup-sync>
+    <juicy-tiles-setup-sync 
+        name="{{Html}}" 
+        storedValue="[[_setup]]"
+        apiUrl="/launcher/juicytilessetup"></juicy-tiles-setup-sync>
     <juicy-tile-grid 
         id="juicy-tile:{{Html}}" 
         setup="[[ _setup | clonedSetup  ]]"
