--- a/wwwroot/sys/juicy-tile-grid/index.html
+++ b/wwwroot/sys/juicy-tile-grid/index.html
@@ -37,7 +37,9 @@ juicy-tile-grid #container>*, /** <-- oh, our `beloved` IE does not get concept 
 juicy-tile-grid>*{
     box-shadow:     0px 0px 10px 0px rgba(50, 50, 50, 0.75);
     text-align: center;
+    border: 1px solid lightgray;
     border-radius: 2px;
+    height: 100%;
 }
 section input{
     width: 4em;
