--- a/wwwroot/sys/juicy-tile-list/index.html
+++ b/wwwroot/sys/juicy-tile-list/index.html
@@ -31,6 +31,7 @@ juicy-tile-list>*{
     box-shadow:     0px 0px 10px 0px rgba(50, 50, 50, 0.75);
     text-align: center;
     border-radius: 2px;
+    height: 100%;
 }
 section input{
     width: 4em;
