Update   Juicy/juicy-tile-list@scoping, Juicy/juicy-tile-grid@tilesProperty, Juicy/juicy-tile-editor#tilesProperty

--- a/wwwroot/sys/juicy-tile-grid/src/juicy-tile-grid.html
+++ b/wwwroot/sys/juicy-tile-grid/src/juicy-tile-grid.html
@@ -116,8 +116,7 @@
                         element, elementStyle, left, top, colNo, rowNo, hidden;  
                     while(childNodeNo--){
                         child = node.items[childNodeNo]
-                        element = tiles[ child.name || child.index ];
-                        console.log(element);
+                        element = tiles[ child.id ];
                         if(!element) {
                             continue; //if element is not found, perhaps DOM was not yet rendered? Skip gracefully
                         }
