--- a/wwwroot/sys/juicy-tile-editor/index.html
+++ b/wwwroot/sys/juicy-tile-editor/index.html
@@ -26,12 +26,13 @@
       padding:0px;
     }
     juicy-tile-list{
-      /*width: 300px;
-      height: 150px;*/
+      padding: 1em;
+      box-shadow:     inset 0px 0px 10px 0px rgba(50, 50, 50, 0.6);
+    }
+    juicy-tile-list#st1{
       width: 100%;
       height: 600px;
       margin: 2em 0;
-      box-shadow:     inset 0px 0px 10px 0px rgba(50, 50, 50, 0.6);
     }
     juicy-tile-list>*{
       box-shadow:         0px 0px 10px 0px rgba(50, 50, 50, 0.75);
@@ -58,7 +59,6 @@
 
     juicy-tile-list>:nth-child(5) {
       background:orange;
-      max-height: 100px;
       overflow:auto;
     }
 
@@ -148,14 +148,14 @@ allowtransparency="true" frameborder="0" scrolling="0" width="90" height="30"></
     setup:{
       gutter: 16,
       items: [
-        {"width": 128, "height": 100, "priority": 0.5, "index": 0},
+        {"width": 128, "height": 100, "priority": 0.5, "id": 0},
         {"width": 512, "height": 100, "priority": 0.48, "gutter": 8, 
         "innerHTML": "<div style=\"background: rgba(191, 81, 236, 0.5); position: relative; top: -8px; left: -8px; height: calc(100% + 2 * 8px ); width: calc(100% + 2 * 8px ); font-size: 100px;\"></div>",
         "items":[
-          {"width": 256, "height": 100, "priority": 0.7, "index": 1},
-          {"width": 128, "height": 100, "priority": 0.0, "index": 2}
+          {"width": 256, "height": 100, "priority": 0.7, "id": 1},
+          {"width": 128, "height": 100, "priority": 0.0, "id": 2}
         ]},
-        {"width": 256, "height": 256, "priority": 0.47, "index": 3}
+        {"width": 256, "heightAuto": true, "priority": 0.47, "id": 3}
       ]
     },
     setup2: {
@@ -170,25 +170,25 @@ allowtransparency="true" frameborder="0" scrolling="0" width="90" height="30"></
         // 233
         // 2
         {
-          index:0,
+          id:0,
           priority:0.9,// 0.6,
           height: 20,
           width: 100
         },
         {
-          index:1,
+          id:1,
           priority:0.8,// 0.9,
           height: 20,
           width: 100
         },
         {
-          index:2,
+          id:2,
           priority:0.6,// 0.3,
           height: 40,
           width: 180
         },
         {
-          index:3,
+          id:3,
           priority:0.4,
           height: 20,
           width: 150
