--- a/wwwroot/sys/juicy-tile-editor/src/juicy-tile-editor.html
+++ b/wwwroot/sys/juicy-tile-editor/src/juicy-tile-editor.html
@@ -34,9 +34,9 @@
         on-juicy-tile-tree-highlight-remove="{{treeHighlightRemoveAction}}"></juicy-tile-tree>
     </div>
 
-    <juicy-highlight id="elementEdited" overlay strokeWidth="3" strokeColor="#33579F" strokeOffset="3"></juicy-highlight>
-    <juicy-highlight id="elementRollover" strokeWidth="1" strokeColor="#222222" strokeOffset="4"></juicy-highlight>
-    <juicy-highlight id="elementSelected" strokeWidth="1" strokeColor="#33579F" strokeOffset="3"></juicy-highlight>
+    <juicy-highlight id="tileEdited" overlay strokeWidth="3" strokeColor="#33579F" strokeOffset="3"></juicy-highlight>
+    <juicy-highlight id="tileRollover" strokeWidth="1" strokeColor="#222222" strokeOffset="4"></juicy-highlight>
+    <juicy-highlight id="tileSelected" strokeWidth="1" strokeColor="#33579F" strokeOffset="3"></juicy-highlight>
   </template>
   <script src="juicy-tile-editor.js"></script>
 </polymer-element>
