Update  Juicy/juicy-tile-list#1748858422, Juicy/juicy-tile-editor#c938590bac- fixes #108

--- a/wwwroot/sys/juicy-tile-list/src/juicy-tile-list.html
+++ b/wwwroot/sys/juicy-tile-list/src/juicy-tile-list.html
@@ -395,7 +395,7 @@
                       this.$.container.appendChild(tile);
                     }
 
-                    (itemSetup.innerHTML != undefined) && (tile.innerHTML = itemSetup.innerHTML);
+                    (itemSetup.content != undefined) && (tile.innerHTML = itemSetup.content);
                   }
                   
 
