--- a/wwwroot/sys/juicy-tile-editor/src/juicy-tile-editor-form.html
+++ b/wwwroot/sys/juicy-tile-editor/src/juicy-tile-editor-form.html
@@ -314,11 +314,11 @@
           </div>
         </div>
 
-        <div class="toolbar-item" disabled?="{{!isSingleSelection}}" data-applyvalue="innerHTML">
+        <div class="toolbar-item" disabled?="{{!isSingleSelection}}" data-applyvalue="content">
           <juicy-popover>
             <button class="handle toolbar-button">✎</button>
             <div class="expandable wide">
-              <textarea value="{{innerHTML}}"></textarea>
+              <textarea value="{{content}}"></textarea>
             </div>
           </juicy-popover>
           <label class="toolbar-label">Inner HTML</label>
