--- a/wwwroot/elements/launcher-launchpad/launcher-launchpad.html
+++ b/wwwroot/elements/launcher-launchpad/launcher-launchpad.html
@@ -2,7 +2,7 @@
 
 <template id="launchpad-tile">
   <launchpad-tile>
-    <a href="/launcher/workspace/{{appName}}">
+    <a href="/{{appName}}">
       <launchpad-icon>
         <!-- icon goes here -->
       </launchpad-icon>
