--- a/wwwroot/sys/juicy-highlight/src/juicy-highlight.html
+++ b/wwwroot/sys/juicy-highlight/src/juicy-highlight.html
@@ -1,190 +1,230 @@
-<link rel="import" href="../../polymer/polymer.html">
+<!-- juicy-highlight v1.0.0 | MIT License -->
+<script>
+    (function (global) {
+        var JuicyHighlightPrototype = Object.create(HTMLElement.prototype);
+        var svg;
 
-<!-- Define your custom element -->
-<polymer-element name="juicy-highlight" attributes="overlay strokeWidth strokeColor strokeOffset">
-    <script>
-    (function() {
+        JuicyHighlightPrototype.createdCallback = function () {
+            this.overlay = false;
+            this.strokeWidth = 1;
+            this.strokeOffset = 1;
+            this.strokeColor = "#000000";
+            this.focused = null;
+            this.currentState = null;
+            this.currentMaskSvg = null;
+            this.currentRectSvg = null;
 
-  function CreateMask(color,opacity) {
-    var svg = document.createElementNS("http://www.w3.org/2000/svg", "svg");
-    //var svg = document.querySelector("#gridmask3");
-    //var ns = "http://www.w3.org/2000/svg";
-    var ns = null;
-    svg.style.pointerEvents = "none";
-    svg.style.position = "absolute";
-    svg.style.left = 0;
-    svg.style.top = 0;
-    document.body.appendChild(svg);
-//    var defs = document.createElementNS(ns, 'defs');
-//    svg.appendChild(defs);
-    var p = document.createElementNS("http://www.w3.org/2000/svg", 'path');
-    p.setAttribute("fill",color);
-    p.setAttribute("fill-rule","evenodd");
-    //p.setAttribute("filter","url(#faded2)");
-  //  var p = svg.getElementById("mask");
-    p.style.opacity = opacity;
-    //newElement.setAttribute("filter","url(#blur)")
-    svg.appendChild(p);
-    return svg;
-  }
+            var attributes = ["overlay", "strokewidth", "strokeoffset", "strokecolor"];
 
-  function CreateFocusRect(strokeWidth, strokeColor) {
-    var svg = document.createElementNS("http://www.w3.org/2000/svg", "svg");
-    var ns = null;
-    svg.style.pointerEvents = "none";
-    svg.style.position = "absolute";
-    svg.setAttribute("fill","none");
-    svg.style.left = 0;
-    svg.style.top = 0;
-    document.body.appendChild(svg);
-    var p = document.createElementNS("http://www.w3.org/2000/svg", 'path');
-    p.setAttribute("stroke",strokeColor);
-    p.setAttribute("stroke-width",strokeWidth + 'px');
-    svg.appendChild(p);
-    return svg;
-  }
+            for (var i = 0; i < attributes.length; i++) {
+                if (this.hasAttribute(attributes[i])) {
+                    this.attributeChangedCallback(attributes[i], null, this.attributes[attributes[i]].value);
+                }
+            }
+        };
 
+        JuicyHighlightPrototype.attributeChangedCallback = function (attrName, oldValue, newValue) {
+            switch (attrName.toLowerCase()) {
+                case "overlay":
+                    newValue = this.hasAttribute("overlay");
+                    this.overlay = !!newValue;
+                    break;
+                case "strokewidth":
+                    var v = parseInt(newValue);
+                    this.strokeWidth = isNaN(v) ? 1 : v;
+                    break;
+                case "strokeoffset":
+                    var v = parseInt(newValue);
+                    this.strokeOffset = isNaN(v) ? 1 : v;
+                    break;
+                case "strokecolor":
+                    this.strokeColor = newValue;
+                    break;
+            }
+        };
 
-
-  function calcMask(cw, ch, focused, strokeOffset) {
-    var mask = "M 0 0 l " + cw + " 0 l 0 " + ch + " l " + -cw +" 0 Z";
-    for (var i = 0, ilen = focused.length; i < ilen; i++) {
-      // Clip out the window for the focused items
-      mask += calcFocusRect(focused[i], strokeOffset);
-    }
-    return mask;
-  }
-
-  function GetScreenCoordinates(obj) {
-      var p = {};
-      p.x = obj.offsetLeft;
-      p.y = obj.offsetTop;
-      while (obj.offsetParent) {
-          p.x = p.x + obj.offsetParent.offsetLeft;
-          p.y = p.y + obj.offsetParent.offsetTop;
-          if (obj == document.getElementsByTagName("body")[0]) {
-              break;
-          }
-          else {
-              obj = obj.offsetParent;
-          }
-      }
-      return p;
-  }
-
-  /**
-   * For elements that are on screen, returns path with rectangle around the element. Otherwise returns empty path
-   * @param {Element} focused HTML element
-   * @param {Number} strokeOffset Distance from element to draw the line
-   * @return {String}
-   */
-  function calcFocusRect(focused, strokeOffset) {
-    if (focused.offsetWidth) {
-      var fw = focused.offsetWidth+strokeOffset;
-      var fh = focused.offsetHeight+strokeOffset;
-      var pos = GetScreenCoordinates(focused);
-      return " M "+(pos.x-strokeOffset/2)+" "+(pos.y-strokeOffset/2)+" l "+fw+" 0 l 0 "+fh+" l -"+fw+" 0 Z";
-    }
-    else {
-      return " M 0 0 Z";
-    }
-  }
-
-
-  function drawMask(maskElement, svg1, svg2, focusRect, overlay) {
-    var availableWidth = document.documentElement.scrollWidth;
-    var availableHeight = document.documentElement.scrollHeight; //document.documentElement.scrollHeight returns the dimension of the page
-    var str = calcMask(availableWidth, availableHeight, maskElement.focused, maskElement.strokeOffset);
-    if(overlay) {
-      var mask = svg1.firstChild;
-      mask.setAttribute("d",str);
-      var mask2 = svg2.firstChild;
-      mask2.setAttribute("d",str);
-    }
-    var rect = focusRect.firstChild;
-    if (maskElement.focused.length) {
-      var str = '';
-      for (var i = 0, ilen = maskElement.focused.length; i < ilen; i++) {
-        str += calcFocusRect(maskElement.focused[i], maskElement.strokeOffset);
-      }
-      rect.setAttribute("d", str);
-    }
-    else {
-      rect.setAttribute("d", "M 0 0");
-    }
-    svg1.style.width = availableWidth + "px"; //need to actually set dimensions of SVG, otherwise will not render in whole
-    svg2.style.width = availableWidth + "px";
-    focusRect.style.width = availableWidth + "px";
-    svg1.style.height = availableHeight + "px";
-    svg2.style.height = availableHeight + "px";
-    focusRect.style.height = availableHeight + "px";
-  }
-
-    var svg1, svg2;
-
-    Polymer('juicy-highlight', {
-        overlay: false,
-        strokeWidth: 1,
-        strokeColor: "#000000",
-        strokeOffset: 1,
-        focused: null,
-        drawMask: function () {
-          drawMask(this,svg1, svg2, this.focusRect, this.overlay);
-        },
-
-        /**
-         * Highlight element(s)
-         * @param elements {null|Element|Array|NodeList}
-         */
-        show: function(elements) {
-          if (Array.isArray(elements)) {
-            this.focused = elements;
-          }
-          else if (elements && elements.length) {
-            this.focused = Array.prototype.slice.call(elements); //convert NodeList to Array
-          }
-          else if(elements) {
-            this.focused = [elements];
-          }
-          else {
-            this.focused = [];
-          }
-          if(!svg1) {
-            svg1 = CreateMask("#FFFFFF", 0.5);
-            svg2 = CreateMask("#000000", 0.5);
-          }
-          if(!this.focusRect) {
-            this.focusRect = CreateFocusRect(this.strokeWidth, this.strokeColor, this.strokeOffset);
-          }
-          if (this.overlay && !svg1.parentNode) {
-            document.body.appendChild(svg1);
-            document.body.appendChild(svg2);
-          }
-          if(this.focusRect && !this.focusRect.parentNode) {
-            document.body.appendChild(this.focusRect);
-          }
-          var repeat = function () {
-            this.drawMask();
-            this.req = window.requestAnimationFrame(repeat.bind(this));
-          }
-          repeat.call(this);
-        },
-
-        /**
-         * Hide current highlight
-         */
-        hide: function() {
-          if(this.overlay && svg1.parentNode) {
-            document.body.removeChild(svg1);
-            document.body.removeChild(svg2);
-          }
-          if(this.focusRect && this.focusRect.parentNode) {
-            document.body.removeChild(this.focusRect);
-          }
-          window.cancelAnimationFrame(this.req);
+        function createMask(color, opacity) {
+            var svg = document.createElementNS("http://www.w3.org/2000/svg", "svg");
+            //var svg = document.querySelector("#gridmask3");
+            //var ns = "http://www.w3.org/2000/svg";
+            var ns = null;
+            svg.style.pointerEvents = "none";
+            svg.style.position = "absolute";
+            svg.style.left = 0;
+            svg.style.top = 0;
+            document.body.appendChild(svg);
+            //    var defs = document.createElementNS(ns, 'defs');
+            //    svg.appendChild(defs);
+            var p = document.createElementNS("http://www.w3.org/2000/svg", 'path');
+            p.setAttribute("fill", color);
+            p.setAttribute("fill-opacity", opacity);
+            p.setAttribute("fill-rule", "evenodd");
+            //p.setAttribute("filter","url(#faded2)");
+            //  var p = svg.getElementById("mask");
+            //p.style.opacity = opacity;
+            //newElement.setAttribute("filter","url(#blur)")
+            svg.appendChild(p);
+            return svg;
         }
-    });
 
-})();
-    </script>
-</polymer-element>
+        function createFocusRect(strokeWidth, strokeColor) {
+            var svg = document.createElementNS("http://www.w3.org/2000/svg", "svg");
+            var ns = null;
+            svg.style.pointerEvents = "none";
+            svg.style.position = "absolute";
+            svg.setAttribute("fill", "none");
+            svg.style.left = 0;
+            svg.style.top = 0;
+            document.body.appendChild(svg);
+            var p = document.createElementNS("http://www.w3.org/2000/svg", 'path');
+            p.setAttribute("stroke", strokeColor);
+            p.setAttribute("stroke-width", strokeWidth + 'px');
+            svg.appendChild(p);
+            return svg;
+        }
+
+        function calcMask(cw, ch, focused, strokeOffset) {
+            var mask = "M 0 0 l " + cw + " 0 l 0 " + ch + " l " + -cw + " 0 Z";
+            for (var i = 0, ilen = focused.length; i < ilen; i++) {
+                // Clip out the window for the focused items
+                mask += calcFocusRect(focused[i], strokeOffset);
+            }
+            return mask;
+        }
+
+        function getScreenCoordinates(obj) {
+            var p = {};
+            p.x = obj.offsetLeft;
+            p.y = obj.offsetTop;
+            while (obj.offsetParent) {
+                p.x = p.x + obj.offsetParent.offsetLeft;
+                p.y = p.y + obj.offsetParent.offsetTop;
+                if (obj == document.getElementsByTagName("body")[0]) {
+                    break;
+                }
+                else {
+                    obj = obj.offsetParent;
+                }
+            }
+            return p;
+        }
+
+        /**
+            * For elements that are on screen, returns path with rectangle around the element. Otherwise returns empty path
+            * @param {Element} focused HTML element
+            * @param {Number} strokeOffset Distance from element to draw the line
+            * @return {String}
+            */
+        function calcFocusRect(focused, strokeOffset) {
+            if (focused.offsetWidth) {
+                var fw = focused.offsetWidth + strokeOffset;
+                var fh = focused.offsetHeight + strokeOffset;
+                var pos = getScreenCoordinates(focused);
+                return " M " + (pos.x - strokeOffset / 2) + " " + (pos.y - strokeOffset / 2) + " l " + fw + " 0 l 0 " + fh + " l -" + fw + " 0 Z";
+            }
+            else {
+                return " M 0 0 Z";
+            }
+        }
+
+        function drawMask(maskElement, svg, focusRect, overlay) {
+            var availableWidth = document.documentElement.scrollWidth;
+            var availableHeight = document.documentElement.scrollHeight; //document.documentElement.scrollHeight returns the dimension of the page
+            var maskSvg = calcMask(availableWidth, availableHeight, maskElement.focused, maskElement.strokeOffset);
+            var rectSvg = "";
+            var rect = focusRect.firstChild;
+            var hidden = maskElement.currentState != "shown";
+
+            if (maskElement.focused.length) {
+                for (var i = 0, ilen = maskElement.focused.length; i < ilen; i++) {
+                    rectSvg += calcFocusRect(maskElement.focused[i], maskElement.strokeOffset);
+                }
+            }
+            else {
+                rectSvg = "M 0 0";
+            }
+
+            if (overlay && (hidden || maskElement.currentMaskSvg != maskSvg)) {
+                var mask = svg.firstChild;
+
+                mask.setAttribute("d", maskSvg);
+                maskElement.currentMaskSvg = maskSvg;
+            }
+
+            if (hidden || maskElement.currentRectSvg != rectSvg) {
+                rect.setAttribute("d", rectSvg);
+                maskElement.currentRectSvg = rectSvg;
+            }
+
+            var w = availableWidth + "px";
+            var h = availableHeight + "px";
+            var els = [svg, focusRect];
+
+            for (var i = 0; i < els.length; i++) {
+                var el = els[i];
+
+                if (el.style.width != w) {
+                    el.style.width = w;
+                }
+
+                if (el.style.height != h) {
+                    el.style.height = h;
+                }
+            }
+        }
+
+        JuicyHighlightPrototype.show = function (elements) {
+            if (Array.isArray(elements)) {
+                this.focused = elements;
+            }
+            else if (elements && elements.length) {
+                this.focused = Array.prototype.slice.call(elements); //convert NodeList to Array
+            }
+            else if (elements) {
+                this.focused = [elements];
+            }
+            else {
+                this.focused = [];
+            }
+
+            if (!svg) {
+                svg = createMask("#555555", 0.75);
+            }
+            if (!this.focusRect) {
+                this.focusRect = createFocusRect(this.strokeWidth, this.strokeColor, this.strokeOffset);
+            }
+            if (this.overlay && !svg.parentNode) {
+                document.body.appendChild(svg);
+            }
+            if (this.focusRect && !this.focusRect.parentNode) {
+                document.body.appendChild(this.focusRect);
+            }
+            var repeat = function () {
+                this.drawMask();
+                this.req = window.requestAnimationFrame(repeat.bind(this));
+            }
+
+            this.currentState = "shown";
+            repeat.call(this);
+        };
+
+        JuicyHighlightPrototype.hide = function () {
+            if (this.overlay && svg.parentNode) {
+                document.body.removeChild(svg);
+            }
+            if (this.focusRect && this.focusRect.parentNode) {
+                document.body.removeChild(this.focusRect);
+            }
+            window.cancelAnimationFrame(this.req);
+            this.currentState = "hidden";
+        };
+
+        JuicyHighlightPrototype.drawMask = function () {
+            drawMask(this, svg, this.focusRect, this.overlay);
+        };
+
+        global.JuicyHighlightElement = document.registerElement('juicy-highlight', {
+            prototype: JuicyHighlightPrototype
+        });
+    })(window);
+</script>
