--- a/wwwroot/Launcher/elements/launcher-partial/launcher-root-partial.html
+++ b/wwwroot/Launcher/elements/launcher-partial/launcher-root-partial.html
@@ -9,10 +9,10 @@ Uses name attribute to assign identifier for juicy-tiles setup in DB.
 <!-- Import dependencies -->
 <!-- <link rel="import" href="/sys/polymer/polymer.html"> -->
 
-<link rel="import" href="../../sys/imported-template/imported-template.html">
-<link rel="import" href="../../sys/juicy-tile-grid/src/juicy-tile-grid.html">
-<link rel="import" href="../../sys/juicy-tiles-setup-sync/src/juicy-tiles-setup-sync.html">
-<!-- <link rel="import" href="../../sys/console-log/console-log.html"> -->
+<link rel="import" href="/sys/imported-template/imported-template.html">
+<link rel="import" href="/sys/juicy-tile-grid/src/juicy-tile-grid.html">
+<link rel="import" href="/sys/juicy-tiles-setup-sync/src/juicy-tiles-setup-sync.html">
+<!-- <link rel="import" href="/sys/console-log/console-log.html"> -->
 
 <template id="partial-template">
   <template bind>
