Hotfix for the ignored z-index of the supplier search dropdown in Procurement

--- a/src/Launcher/wwwroot/sys/juicy-tile-list/src/juicy-tile-list.html
+++ b/src/Launcher/wwwroot/sys/juicy-tile-list/src/juicy-tile-list.html
@@ -29,10 +29,12 @@
           polyfill-next-selector { content: ':host #container> *'; }
           #container ::content>*,
         */
+        /*
+        Hotfix for the ignored z-index of the supplier search dropdown in Procurement
         .juicy-tile{
             position: absolute;
             z-index: 2;
-        }
+        }*/
         .containerBackground{
             position: absolute;
             z-index: -1;
