--- a/src/Launcher/wwwroot/Launcher/LauncherTemplate.html
+++ b/src/Launcher/wwwroot/Launcher/LauncherTemplate.html
@@ -29,7 +29,7 @@
     <link rel="import" href="/sys/juicy-redirect/src/juicy-redirect.html" />
 
     <!-- Style sheets -->
-    <link rel="stylesheet" href="/sys/bootswatch/paper/bootstrap.css" />
+    <link rel="import" href="/sys/bootstrap.html" />
     <link rel="stylesheet" href="/Launcher/css/style.css" />
 </head>
 <body is="launcher-main">
