Update bower dependencies
 - Juicy/juicy-tile-list@0.1.0,
 - Juicy/juicy-tile-grid@0.1.0,
 - Juicy/juicy-tile-editor@4c27cb9b39
fixes #113

--- a/src/Launcher/wwwroot/sys/juicy-tile-grid/index.html
+++ b/src/Launcher/wwwroot/sys/juicy-tile-grid/index.html
@@ -181,7 +181,7 @@ juicy-jsoneditor{
 
 
     </script>
-    <section>
+<!--     <section>
         <h3><a href="https://github.com/Juicy/juicy-tile-grid#juicy-tile-grid-">API</a></h3>
         <ul>
             <li><code>juicytilelist.resizeItem</code>(<input placeholder="itemIndex">, <input placeholder="width">, <input placeholder="height">) <button id="callResize">call</button></li>
@@ -216,7 +216,7 @@ juicy-jsoneditor{
             document.querySelector("juicy-tile-grid").refresh();
         };
         </script>
-    </section>
+    </section> -->
     <section>
         <h3>Features</h3>
         <ul>
