--- a/src/Launcher/wwwroot/sys/juicy-tile-list/src/juicy-tile-list.html
+++ b/src/Launcher/wwwroot/sys/juicy-tile-list/src/juicy-tile-list.html
@@ -3,6 +3,7 @@
 
 @element juicy-tile-list
 @demo https://Juicy.github.io/juicy-tile-list/
+version: 0.1.0
 -->
 <!-- Import Polymer -->
 <link rel="import" href="../../polymer/polymer.html">
@@ -29,6 +30,9 @@
           polyfill-next-selector { content: ':host #container> *'; }
           #container ::content>*,
         */
+        .juicy-tile{
+            position: absolute;
+        }
         .containerBackground{
             position: absolute;
             z-index: -1;
